// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherData Integation Test handles errors from the weatherAPI.getWeatherData method 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "getWeatherData": null,
    },
    "errors": [
      {
        "extensions": {
          "code": "INTERNAL_SERVER_ERROR",
        },
        "locations": [
          {
            "column": 3,
            "line": 2,
          },
        ],
        "message": "Network error",
        "path": [
          "getWeatherData",
        ],
      },
    ],
  },
}
`;

exports[`WeatherData Integation Test returns weather data success 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "getWeatherData": {
        "current": {
          "interval": 900,
          "relativeHumidity2m": 59,
          "temperature2m": 0.4,
          "time": "2024-03-03T09:00",
          "windSpeed10m": 18.5,
        },
        "currentUnits": {
          "interval": "seconds",
          "relativeHumidity2m": "%",
          "temperature2m": "°C",
          "time": "iso8601",
          "windSpeed10m": "km/h",
        },
        "elevation": 250,
        "generationtimeMs": 0.102996826171875,
        "hourly": {
          "relativeHumidity2m": [
            82,
            85,
            86,
          ],
          "temperature2m": [
            -2.4,
            -2.6,
            -2.6,
          ],
          "time": [
            "2024-03-03T00:00",
            "2024-03-03T01:00",
            "2024-03-03T02:00",
          ],
          "windSpeed10m": [
            8.6,
            9.9,
            12.8,
          ],
        },
        "hourlyUnits": {
          "relativeHumidity2m": "%",
          "temperature2m": "°C",
          "time": "iso8601",
          "windSpeed10m": "km/h",
        },
        "latitude": 60,
        "longitude": 60,
        "timezone": "GMT",
        "timezoneAbbreviation": "GMT",
        "utcOffsetSeconds": 0,
      },
    },
    "errors": undefined,
  },
}
`;

exports[`WeatherData Integation Test throws an error for invalid latitude 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "getWeatherData": null,
    },
    "errors": [
      {
        "extensions": {
          "code": "BAD_USER_INPUT",
        },
        "locations": [
          {
            "column": 3,
            "line": 2,
          },
        ],
        "message": "Latitude must be between -90 and 90 degrees.",
        "path": [
          "getWeatherData",
        ],
      },
    ],
  },
}
`;

exports[`WeatherData Integation Test throws an error for invalid longitude 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "getWeatherData": null,
    },
    "errors": [
      {
        "extensions": {
          "code": "BAD_USER_INPUT",
        },
        "locations": [
          {
            "column": 3,
            "line": 2,
          },
        ],
        "message": "Longitude must be between -180 and 180 degrees.",
        "path": [
          "getWeatherData",
        ],
      },
    ],
  },
}
`;
